cabal-version:       2.4
name:                haskell-battlesnake
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/joenash/haskell-battlesnake
bug-reports:         https://github.com/joenash/haskell-battlesnake/issues
license:             MIT
license-file:        LICENSE
author:              Joe Nash
maintainer:          Joe Nash <1790822+joenash@users.noreply.github.com>
copyright:           2020 Joe Nash
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/joenash/haskell-battlesnake.git

common common-options
  build-depends:       base ^>= 4.13.0.0,
                       text ^>= 1.2.4.0
  default-extensions:  OverloadedStrings,
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)

  default-language:    Haskell2010
library haskell-battlesnake-lib
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Battlesnake.Types,
                       Battlesnake.Lib
  build-depends:       aeson ^>=1.5.4.1,
                       containers ^>= 0.6.4.1

executable haskell-battlesnake
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       scotty ^>=0.12,
                       aeson ^>=1.5.4.1,
                       wai-extra ^>= 3.1.3,
                       containers ^>= 0.6.4.1,
                       haskell-battlesnake-lib
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite haskell-battlesnake-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hspec ^>= 2.7.4,
                       QuickCheck ^>= 2.14.2

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark haskell-battlesnake-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
